# robinhood

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  Doxyfile  LICENSE  Makefile.am  Makefile.in  PERFORMANCE.md  README.md  STYLE.md  aclocal.m4  configure  configure.ac  robinhood.pc.in
.github/workflows/: ci.yml  docs.yml  release.yml  retry-docs-deploy.yml
examples/: environ.c  memo.c  netifs.c  scan.c  wordfreq.c
include/: robinhood.h
src/: robinhood.c
tests/: tester.c
